...
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(innerPadding)
                    .padding(AppDimensions.paddingMedium)
                    .wrapContentSize(Alignment.Center)
                    .testTag("waitingForCompletionScreen"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              Text(
                  text = "You have completed your interview. Waiting for $friendName to finish.",
                  style = MaterialTheme.typography.bodyLarge,
                  textAlign = TextAlign.Center,
                  color = MaterialTheme.colorScheme.onSurface,
...
